<resources>
    <string name="app_name">21 días</string>
    <!--Titulos inicio pantalla 1 -->
    <string name="titulo_pantalla1_epifania">Epifanía</string>
    <string name="subtitulo_patalla1_epifania">el arte de \n manifestar en</string>
    <string name="subtitulo_pantalla1_veintiun">21 días</string>

    <!--Titulos inicio pantalla 2 -->
    <string name="subtitulo_pantalla2_abre">Abre</string>
    <string name="titulo_pantalla2_tus">Tus</string>
    <string name="titulo_pantalla2_3">3</string>
    <string name="titulo_pantalla2_ojos">ojos</string>
    <string name="subtitulo_pantalla2_final">y descubre dentro de ti, \n los pensamientos iluminadores \n que pueden
    manifestar, sanar \n y atraer la vida que quieres.</string>

    <!--Titulos inicio pantalla 3 -->
    <string name="subtitulo_pantalla3_estas">Estás a</string>
    <string name="subtitulo_pantalla3_solo">solo</string>
    <string name="titulo_pantalla3_4">4</string>
    <string name="titulo_pantalla3_pasos">pasos</string>
    <string name="texto_pantalla3_izquierdo_superior">Elije lo que \nquieres sanar \no atraer \n!Ahora¡</string>
    <string name="texto_pantalla3_derecho_superior">Sorpréndete \ncon las \n afirmaciones y \n decretos más \n poderosos</string>
    <string name="texto_pantalla3_izquierdo_inferior">Repite 21 días \nhasta que el \ncerebro te \nobedezca y \nganes \nrecompensas</string>
    <string name="texto_pantalla3_derecho_inferior">Crea una \nmeditación \n con la fuerza\n de tu voz y la \n magia de la \n  música</string>

    <!--Titulos inicio pantalla portal -->
    <string name="titulo_portal">Portal</string>
    <string name="subtitulo_portal">Acabas de abrir el</string>
    <string name="titulo_manifestacion">Manifestación</string>
    <string name="subtitulo_manifestacion">21 días de \nreprogramación</string>

    <!--Titulos inicio pantalla qué estás buscando -->
    <string name="titulo_qué">Buscando?</string>
    <string name="subtitulo_qué">¿Qué estás</string>


    <!--Textos pantalla inicio de sesión -->
    <string name="correo">E-mail</string>
    <string name="contrasenia">Password</string>
    <string name="olvido">Forgot Password</string>
    <string name="promocional">I have a promotional code</string>
    <string name="iniciar_sesion">Sign in</string>
    <string name="no_tiene_cuenta">Do not have an account?</string>
    <string name="regristese">Register</string>

    <!--Textos pantalla categorias general -->
    <string name="categoria_sanar">Sanar</string>
    <string name="categoria_superar">Superar la \n   pérdida</string>
    <string name="categoria_paz">Paz mental</string>
    <string name="categoria_aceptar">Aceptar la \ndiferencia</string>
    <string name="categoria_atraer">Atraer lo \nque quiero</string>
    <string name="title_activity_que_estas_buscando">ActivityQueEstasBuscando</string>

    <string name="titulo_sanar">Sanar</string>
    <string name="titulo_sanar_uno">Elijo</string>
    <string name="titulo_sanar_dos">aquí y ahora</string>

    <string name="titulo_superar">Superar</string>
    <string name="titulo_superar_uno">Yo puedo</string>
    <string name="titulo_superar_dos">la pérdida de</string>

    <string name="titulo_paz">Paz mental</string>
    <string name="titulo_paz_uno">Tengo</string>
    <string name="titulo_paz_dos">aquí y ahora</string>

    <string name="titulo_diferencia">Diferencia</string>
    <string name="titulo_diferencia_uno">Acepto la</string>
    <string name="titulo_diferencia_dos">aquí y ahora</string>

    <string name="titulo_atraer">Atraer</string>
    <string name="titulo_atraer_uno">Puedo</string>
    <string name="titulo_atraer_dos">lo que quiero</string>

    <!--Textos pantalla grabación-->
    <string name="titulo_grabacion">Grabación</string>
    <string name="guia_grabacion_uno">!Habla ahora¡ \n Presiona para comenzar</string>
    <string name="guia_grabacion_dos">Grabando... \n Presiona para pausar/detener</string>
    <string name="frase_grabacion">Poseo la capacidad de cambiar lo que desee en mi vida.</string>
    <string name="subtitulo_grabacion">1 de 21</string>
    <string name="btn_grabar_de_nuevo">Grabar de nuevo</string>
    <string name="btn_aceptar">Aceptar</string>

    <string name="title_activity_sanar1">Sanar1Activity</string>

    <!-- Etiquetas menú -->
    <string name="menu_universo">Mi universo</string>
    <string name="menu_grabacion">Mi grabación</string>
    <string name="menu_notificacion">Notificaciones</string>
    <string name="menu_volumen">Volumen</string>
    <string name="menu_pisorappi">PsicoRappi</string>
    <string name="menu_carrito">Carrito de Compras</string>
    <string name="menu_calendario">Calendario de Eventos</string>
    <string name="menu_recompensas">Recompensas</string>
    <string name="menu_amigos">Invitar amigos</string>
    <string name="menu_pagina">Página web</string>
    <string name="menu_problema">Reportar un problema</string>
    <string name="menu_cerrar">Cerrar Sesión</string>
    <string name="navigation_drawer_open">Abrir Menú</string>
    <string name="navigation_drawer_close">Cerrar Menú</string>

    <!-- Textos cajas de diálogo -->
    <string name="guia_titulo">Guía</string>
    <string name="guia_subtitulo">grabación</string>
    <string name="guia_texto_1">El éxito de 21 días de cambio \n está en el uso de tu propia voz.</string>
    <string name="guia_texto_2">Recuerda estos \npasos para grabar:</string>
    <string name="guia_1">1. </string>
    <string name="guia_2">2. </string>
    <string name="guia_3">3. </string>
    <string name="guia_4">4. </string>
    <string name="guia_paso_1">Elige un lugar cómodo y \n tranquilo.</string>
    <string name="guia_paso_2">Lee pausando y claro.</string>
    <string name="guia_paso_3">Ponle emoción a tu voz.</string>
    <string name="guia_paso_4">Acepta tu voz, no te juzgues!.</string>
    <string name="guia_boton">Continuar</string>
    <string name="guia_paso_11">Pulsa el botón de grabar una \nvez para empezar a grabar.</string>
    <string name="guia_paso_22">Si deseas detener la \ngrabación pulsa de nuevo \nel botón central.</string>
    <string name="guia_3_texto">Escucha el audio, se es de tu \nagrado continúa, de lo contrario \nvuelve a grabar</string>
    <string name="guia_4_titulo">¡Muy bien!</string>
    <string name="guia_4_texto">Haz completado la grabación de tus 21 \nfrases. Ahora vamos a seleccionar una \nmelodía de fondo.</string>
    <string name="guia_4_boton">Vamos</string>

    <!-- Textos subcategorias -->
    <string name="elige_tus_frases">Elije tus frases de poder</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="numero21">/21</string>
    <string name="consecutivo">1</string>

    <!-- Textos música -->
    <string name="dialogom_titulo">¡Perfecto!</string>
    <string name="dialogom_subtitulo">Has elegido una melodía de fondo. \n¿Vamos a escuchar tus grabaciones?</string>
    <string name="dialogom_aceptar">Vamos</string>
    <string name="dialogom_cancelar">No, elegiré otra</string>

    <!-- Textos volumen -->
    <string name="volumen_titulo">Volumen</string>
    <string name="volumen_subtitulo">Aquí puedes ajustar el volumen de tu \nvoz y la melodía de fondo. Después de\n
        ajustar presiona continuar</string>
    <string name="volumen_voz">Voz</string>
    <string name="volumen_musica">Música de fondo</string>
    <string name="volumen_continuar">Continuar</string>

    <!--Textos fotografía -->

    <string name="fotografia_titulo">Mi fotografía</string>
    <string name="fotografia_continuar">Continuar</string>
    <string name="fotografia_subtitulo1">Personaliza con tu imagen</string>
    <string name="fotografia_subtitulo2">Toca la imagen y sube una fotografía de \ntu galería. Si no la seleccionas, quedará \n esta por defecto</string>
    <string name="dialogof_boton_tomar">Tomar una foto</string>
    <string name="dialogof_boton_cancelar">Cancelar</string>
    <string name="dialogof_boton_seleccionar">Seleccionar desde galería</string>




</resources>