<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/dialogo_rectangular"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogom_titulo"
        style="@style/estilo_textos_titulos_inicio"
        android:layout_marginTop="0dp"
        android:textColor="#406587"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogom_subtitulo"
        style="@style/estilo_textos_dialogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />

    <TextView
        android:id="@+id/btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogom_aceptar"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        style="@style/estilo_textos_dialogo"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boton_redondo_largo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitulo" />

    <TextView
        android:id="@+id/btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogom_cancelar"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        style="@style/estilo_textos_dialogo"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_aceptar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_aceptar" />
</androidx.constraintlayout.widget.ConstraintLayout>