<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/dialogo_rectangular"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fotografia_titulo"
        style="@style/estilo_textos_titulos_inicio"
        android:layout_marginTop="0dp"
        android:textColor="#406587"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/btn_tomar_foto"
        style="@style/estilo_textos_dialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/boton_redondo_largo"
        android:paddingLeft="55dp"
        android:paddingTop="10dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:text="@string/dialogof_boton_tomar"
        app:layout_constraintEnd_toEndOf="@+id/btn_seleccionar_galeria"
        app:layout_constraintStart_toStartOf="@+id/btn_seleccionar_galeria"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />

    <TextView
        android:id="@+id/btn_seleccionar_galeria"
        style="@style/estilo_textos_dialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_redondo_largo"
        android:layout_marginTop="10dp"
        android:paddingLeft="24dp"
        android:paddingTop="10dp"
        android:paddingRight="24dp"
        android:paddingBottom="10dp"
        android:text="@string/dialogof_boton_seleccionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_tomar_foto" />

    <TextView
        android:id="@+id/btn_cancelar"
        style="@style/estilo_textos_dialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/dialogof_boton_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_seleccionar_galeria" />
</androidx.constraintlayout.widget.ConstraintLayout>