<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pantalla_grabacion"
    android:padding="20dp"
    tools:context=".ui.grabacion.GrabacionActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/txt_titulo_grabacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_grabacion"
        android:fontFamily="@font/soul_signature"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_subtitulo_grabacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo_grabacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_grabacion" />

    <TextView
        android:id="@+id/txt_frase_grabacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frase_grabacion"
        android:textSize="20sp"
        android:padding="60dp"
        android:gravity="center"
        android:fontFamily="@font/recoleta"
        android:background="@drawable/edit_rectangular"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

    <ImageView
        android:id="@+id/img_grabar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal_1"
        app:srcCompat="@drawable/boton_grabar" />

    <TextView
        android:id="@+id/txt_guia_grabacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guia_grabacion_uno"
        android:textSize="16sp"
        android:gravity="center"
        android:fontFamily="@font/recoleta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_grabar" />

    <ImageView
        android:id="@+id/img_ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/boton_ayuda" />

    <TextView
        android:id="@+id/txt_grabar_de_nuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_grabar_de_nuevo"
        android:textColor="@color/btn_texto"
        android:padding="10dp"
        android:textSize="14sp"
        android:fontFamily="@font/recoleta"
        android:visibility="invisible"
        android:background="@drawable/edit_rectangular"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_grabar" />

    <TextView
        android:id="@+id/img_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_aceptar"
        android:textColor="@color/btn_texto"
        android:padding="10dp"
        android:fontFamily="@font/recoleta"
        android:visibility="invisible"
        android:textSize="14sp"
        android:background="@drawable/edit_rectangular_lleno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/img_grabar" />

    <ImageView
        android:id="@+id/img_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:visibility="invisible"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/txt_frase_grabacion"
        app:srcCompat="@drawable/boton_reproducir" />


</androidx.constraintlayout.widget.ConstraintLayout>